--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,17 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>
+    <main role="main">
+      <app-root></app-root>
+    </main>
+    <!-- FOOTER -->
+    <footer class="container">
+      <p class="float-right"><a href="#">Back to top</a></p>
+      <p>
+        &copy; 2020-2021 <i style="color:yellow;font-size:150%">O</i>Shop, Inc.
+        &middot; <a href="#">Privacy</a> &middot;
+        <a href="#">Terms</a>
+      </p>
+    </footer>
   </body>
 </html>
